--- a/signUp.html
+++ b/signUp.html
@@ -14,10 +14,10 @@
     <div class="container-fluid">
         <span class="title"><h1><b>Sign Up</b></h1></span>
         
-        <div class="container">
-            <img class="" src="" alt="">
+        <div class="input-fields">
+            <span class="input-field"><img src="images/Page-1.png" alt=""></span>
         </div>
-        <img src="CRM-SignUp/Group 10.png" alt="Photo of girl watching video" class="photo">
+        <img src="images/Group 10.png" alt="Photo of girl watching video" class="photo">
     </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/js/bootstrap.min.js"></script>
