--- a/index.html
+++ b/index.html
@@ -7,11 +7,33 @@
 <meta name="Description" content="Enter your description here"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-<link rel="stylesheet" href="assets/css/style.css">
-<title>Title</title>
+<link rel="stylesheet" href="css/styles.css">
+<title>Sign In</title>
 </head>
 <body>
-
+    <div class="row">
+        <div class="col-2 offset-8">
+            <fieldset class="center-span">
+                <div class="offset-2">
+                    <h2>Sign In</h2>
+                    <form>
+                        <input type="username" name="username" placeholder="username" id="username">
+                        <input type="email" name="email" placeholder="email" id="email">
+                        <input type="password" name="password" placeholder="Enter password" id="password">
+                        <div class="offset-5">
+                            <input type="submit" value="Sign In">
+                        </div> 
+                        <p class="">Or Sign In with social platforms</p>   
+                    </form>
+                </div>
+                <div
+                ></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </fieldset>
+        </div> 
+    </div>             
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/js/bootstrap.min.js"></script>
 </body>
