Finished sign up page

--- a/signUp.html
+++ b/signUp.html
@@ -15,7 +15,29 @@
         <span class="title"><h1><b>Sign Up</b></h1></span>
         
         <div class="input-fields">
-            <span class="input-field"><img src="images/Page-1.png" alt=""></span>
+            <span class="input-field"><img class="input-img" src="images/Page-1.png" alt=""></span>
+            <span class="input-field"><i class="far fa-envelope"></i></span>
+            <span class="input-field"><i class="fas fa-lock"></i></span>
+        </div>
+
+        <div class="bottom">
+            <button class="signUp-button"><b>Sign Up</b></button>
+            <b>Or Sign up with social platforms</b>
+
+            <div class="social-media">
+                <span class="icon">
+                    <img src="images/Path 151.png" alt="">
+                </span>
+                <span class="icon">
+                    <img src="images/Path 152.png" alt="">
+                </span>
+                <span class="icon">
+                    <i class="fab fa-google fa-3x"></i>
+                </span>
+                <span class="icon">
+                    <i class="fab fa-linkedin-in fa-3x"></i>
+                </span>
+            </div>
         </div>
         <img src="images/Group 10.png" alt="Photo of girl watching video" class="photo">
     </div>
