--- a/How-It-Works.html
+++ b/How-It-Works.html
@@ -13,56 +13,71 @@
 </head>
 
 <body>
+  <div class="container" id="header">
+    <nav class="navbar navbar-expand-md bg-white navbar-light">
+    <a class="navbar-brand" href="#"><img src="images/Logo.png" alt=""></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Features</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Pricing</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">How It Works</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Support</a>
+        </li>
+      </ul>
+    </div>
+    <div>
+      <a class="btn btn-outline-primary" href="#" role="button">Sign In</a>
+      <a class="btn btn-primary" href="#" role="button">Try It Free</a>
+    </div>
+    </nav>
+  </div>  
     
-  <div class="container">
+  <div class="container-fluid">
       <div class="row">
-          <nav class="navbar navbar-expand-sm bg-white navbar-white">
-            <!-- Brand/logo -->
-          <div class="col-2">
-            <a class="navbar-brand" href="#">
-              <img src="https://drive.google.com/file/d/13UfWoHPVZ8oOh3vN12RwRDlU1mTnTW3I/view" alt="logo" style="width:40px;">
-            </a>
-          </div> 
-            <!-- Links -->
-          <div class="col-6">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">How It Works</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Support</a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-4">
-            <a class="btn btn-outline-primary" href="#" role="button">Sign In</a>
-            <a class="btn btn-primary" href="#" role="button">Try It Free</a>
-          </nav>
-      </div>
+        <div class="col-7" id="focus">
+          <h1>Focus on<br>Your Business</h1>
+          <h2>Let Us Handle everything Else</h2>
+          <h3>Subscription Billing, powered with revenue retention tools and a seamless customer 
+            experience - without the technical hurdles</h3>
+          <a class="btn btn-primary" href="#" role="button">Sign Up Free</a>
+          <a class="btn btn-outline-primary" href="#" role="button">Chat With Us</a>
+          <h3 id="doubletap">Already using <b>Double</b>Tap? <a href="#" id="noembelish"><b>Sign In</b></a></h3>
+          <h5>Free 14 day trial   *   Manage Customers in Minutes   *   Cancel at Anytime</h5>
+        </div>
+        <div class="col-5">
+          <img src="images/Header-Side.png" alt="" class="img-fluid">
+        </div>
       </div>
     </div>
 
     <div class="container">
       <div class="row">
-        <div class="col-7" id="focus">
-          <h1>Focus on Your Business</h1>
-          <h2>Let Us Handle everything Else</h2>
-          <h3>Subscription Billing, powered with revenue retention tools and a seamless customer experience - without the technical hurdles</h3>
-          <a class="btn btn-primary" href="#" role="button">Sign Up Free</a>
-          <a class="btn btn-outline-primary" href="#" role="button">Chat With Us</a>
-          <h3>Already using DoubleTap? <a href="#">Sign In</a></h3>
-          <h5>Free 14 day trial   *   Manage Customers in Minutes   *   Cancel at Anytime</h5>
+        <h1 class="text-center">How It Works</h1>
+        <h2 class="text-center">Lorem Ipsum is simply dummy text of the<br>printing and typesetting industry. Lorem Ipsum<br>
+          has been the industry's standard dummy text<br>ever since the 1500's, when an unknown printer<br>
+          took a galley of type and scrambled it to make a</h2>
+      </div>
+      <div class="row" id="collect_info">
+        <div class="col-md-5">
+          <img src="images/Collect-info.png" alt="" class="img-fluid">
         </div>
-        <div class="col-5"></div>
+        <div class="col-md-7" id="useful">
+          <h1>Collect Useful Info</h1>
+          <h2>Deliver the world of payment options an seamless checkout experiences, making it easy for customers to pay you for your products and services.</h2>
+        </div>
       </div>
     </div>
 
