--- a/SignIn.html
+++ b/SignIn.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="css/signIn.css">
 <title>Sign In</title>
 </head>
-<body>
+<body background="images/Sign-In-background.png">
     <div class="row">
         <div class="col-2 offset-8">
             <fieldset class="center-span">
@@ -23,17 +23,22 @@
                         <div class="offset-5">
                             <input type="submit" value="Sign In">
                         </div> 
-                        <p class="">Or Sign In with social platforms</p>   
-                    </form>
-                </div>
-                <div
-                ></div>
-                <div></div>
-                <div></div>
-                <div></div>
+                        <p class="text">Or Sign In with social platforms</p> 
+                            <div class="flex">
+                                
+                                    <input type="image" src="images/Path 151@2x.png" id="facebook">
+                                    <input type="image" src="images/Path 152@2x.png" id="twitter"> 
+                                    <input type="image" src="images/google-icon.ico" id="google">
+                                    <input type="image" src="images/linkedin-logo-png-1845-64x64.ico" id="linkedin">
+                            </div>                             
             </fieldset>
         </div> 
-    </div>             
+    </div> 
+<div class="account">
+    <p>Don't Have an Account Yet?</p>
+    <p>What are you waiting for? Let's Fix that now!</p>
+    <input type="button" value="Sign Up" id="button">
+</div>             
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/js/bootstrap.min.js"></script>
 </body>
