--- a/How-It-Works.html
+++ b/How-It-Works.html
@@ -14,7 +14,7 @@
 
 <body>
   <div class="container" id="header">
-    <nav class="navbar navbar-expand-md bg-white navbar-light">
+    <nav class="navbar navbar-expand-xl bg-white navbar-light">
     <a class="navbar-brand" href="#"><img src="images/Logo.png" alt=""></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
@@ -45,19 +45,19 @@
     </nav>
   </div>  
     
-  <div class="container-fluid">
+  <div class="container">
       <div class="row">
-        <div class="col-7" id="focus">
+        <div class="col-12 col-lg-7" id="focus">
           <h1>Focus on<br>Your Business</h1>
           <h2>Let Us Handle everything Else</h2>
-          <h3>Subscription Billing, powered with revenue retention tools and a seamless customer 
+          <h3>Subscription Billing, powered with revenue retention tools and a<br>seamless customer 
             experience - without the technical hurdles</h3>
           <a class="btn btn-primary" href="#" role="button">Sign Up Free</a>
           <a class="btn btn-outline-primary" href="#" role="button">Chat With Us</a>
           <h3 id="doubletap">Already using <b>Double</b>Tap? <a href="#" id="noembelish"><b>Sign In</b></a></h3>
           <h5>Free 14 day trial   *   Manage Customers in Minutes   *   Cancel at Anytime</h5>
         </div>
-        <div class="col-5">
+        <div class="col-12 col-lg-5" id="nine_pic">
           <img src="images/Header-Side.png" alt="" class="img-fluid">
         </div>
       </div>
@@ -71,10 +71,10 @@
           took a galley of type and scrambled it to make a</h2>
       </div>
       <div class="row" id="collect_info">
-        <div class="col-md-5">
+        <div class="col-12 col-md-5">
           <img src="images/Collect-info.png" alt="" class="img-fluid">
         </div>
-        <div class="col-md-7" id="useful">
+        <div class="col-12 col-md-7" id="useful">
           <h1>Collect Useful Info</h1>
           <h2>Deliver the world of payment options an seamless checkout experiences, making it easy for customers to pay you for your products and services.</h2>
         </div>
