Footer for long page

--- a/How-It-Works.html
+++ b/How-It-Works.html
@@ -81,6 +81,15 @@
       </div>
     </div>
 
+    <footer>
+      <h2 class="try-text">Try Double Tap Today!</h2>
+      <p class="get-started-text"><b>Let's Get Started</b></p>
+      <div class="footer-buttons">
+        <span id="get-started">Get Started<i class="fas fa-chevron-double-right fa-2x"></i></span>
+        <span id="chat-with-us"><i class="fas fa-comment-dots"></i>Chat With Us</span>
+      </div>
+      <h5 class="options-text" >Free 14 day trial   *   Manage Customers in Minutes   *   Cancel at Anytime</h5>
+    </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/js/bootstrap.min.js"></script>
 
