--- a/crmLanding.html
+++ b/crmLanding.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,60 +9,122 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 <link rel="stylesheet" href="css/crmLanding.css">
-<title>CRM Landing Page</title>
+<title>How It Works</title>
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="images/Logo-1.png" alt="Logo">
-            </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a id="navlinks" class="nav-link" href="#">Features</a>
-              </li>
-              <li class="nav-item">
-                <a id="navlinks" class="nav-link" href="#">Pricing</a>
-              </li>
-              <li class="nav-item">
-                <a id="navlinks" class="nav-link" href="#">How it Works</a>
-              </li>
-              <li class="nav-item">
-                <a id="navlinks" class="nav-link" href="#">Support</a>
-              </li>
-            </ul>
-          </div>
-        <a class="btn btn-outline-primary" href="#" role="button">Sign In</a>
-        <a class="btn btn-primary" href="#" role="button">Try It Free</a>
-        </div>
-      </nav>
 
-      <div class="container-focus">
-        <h1><b>Focus on <br> Your Business</b></h1>
+<body>
+  <div class="container" id="header">
+    <nav class="navbar navbar-expand-xl bg-white navbar-light">
+      <a class="navbar-brand" href="#"><img src="images/Logo.png" alt=""></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Features</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Pricing</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">How It Works</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Support</a>
+          </li>
+        </ul>
+      </div>
+      <div>
+        <a class="btn btn-outline-primary" href="#" type="button">Sign In</a>
+        <a class="btn btn-primary" href="#" type="button">Try It Free</a>
+      </div>
+    </nav>
+  </div>  
+    
+  <div class="container">
+    <div class="row">
+      <div class="col-12 col-lg-7" id="focus">
+        <h1>Focus on<br>Your Business</h1>
         <h2>Let Us Handle everything Else</h2>
-        <h6>Subscription Billing, powered with revenue retention tools and a seamless customer experience - without the technical hurdles</h6>
-        <a class="btn btn-primary" href="#" role="button">Sign Up Free   >></a>
+        <h3>Subscription Billing, powered with revenue retention tools and a<br>seamless customer 
+            experience - without the technical hurdles</h3>
+        <a class="btn btn-primary" href="#" role="button">Sign Up Free</a>
         <a class="btn btn-outline-primary" href="#" role="button">Chat With Us</a>
-        <h6>Already using <b>Double</b>Tap? <b>Sign In</b></h6>
+        <h3 id="doubletap">Already using <b>Double</b>Tap? <a href="#" id="noembelish"><b>Sign In</b></a></h3>
+        <h5>Free 14 day trial   *   Manage Customers in Minutes   *   Cancel at Anytime</h5>
+      </div>
+      <div class="col-12 col-lg-5" id="nine_pic">
+        <img src="images/Header-Side.png" alt="" class="img-fluid">
+      </div>
+    </div>
+  </div>
+
+  <div class="container" id="middle">
+    <div class="row justify-content-center" id="explore">
+      <div class="col-8">
+        <hr>
+        <h1 class="text-center"><b>Start To Explore Double Tap</b></h1>
+        <h2 class="text-center">A new and better way for small businesses to manage their customer base,
+          payments, and keep track of internal tasks</h2>
+      </div>
+    </div>
+    <div class="row" id="squarepics">
+      <div class="col-3 text-center"><button class="btn btn-primary p-4 rounded-9">ffffff</button></div>
+      <div class="col-3 text-center"><button class="btn btn-primary p-4 rounded-9">ffffff</button></div>
+      <div class="col-3 text-center"><button class="btn btn-primary p-4 rounded-9">ffffff</button></div>
+      <div class="col-3 text-center"><button class="btn btn-primary p-4 rounded-9">ffffff</button></div>
+    </div>
+    <div class="row" id="collect_info">
+      <div class="col-12 col-md-5">
+        <img src="images/Collect-info.png" alt="" class="img-fluid" id="infopic">
+      </div>
+      <div class="col-12 col-md-7" id="useful">
+        <h1>Collect Useful Info</h1>
+        <h2>Deliver the world of payment options an seamless checkout experiences, making it easy for customers to pay you for your products and services.</h2>
+      </div>
+    </div>
+    <div class="row justify-content-center">
+      <div class="col-8">
+        <h2 class="text-center" id="second_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+            has been the industry's standard dummy text ever since the 1500's, when an unknown printer
+            took a galley of type and scrambled it to make a</h2>
+      </div>
+    </div>
+    <div class="row" id="getpaidsooner">
+      <div class="col-12 col-md-5">
+        <img src="images/Take Payments.png" alt="" class="img-fluid" id="paidpic">
+      </div>
+      <div class="col-12 col-md-7" id="paidtext">
+        <h1>Get Paid Sooner</h1>
+        <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            Lorem Ipsum has been the industry's standard dummy text ever since the 1500's,
+            when an unknown printer took a galley of type and scrambled it to make a type
+            specimen book. It has survived not only five centuries, but also the leap into
+            electronic typesetting, remaining essentially unchanged.</h2>
+      </div>
+    </div>
+  </div>
+  <div class="container" id="footer">
+    <div class="row justify-content-center" id="footer_row">
+      <div class="col-5">
+        <h1>Try Double Tap Today!</h1>
+        <h2>Lets's Get Started</h2>
+        <div>
+          <a class="btn btn-primary" href="#" role="button" id="footerbutton">Get Started</a>
+          <a class="btn btn-primary" href="#" role="button">Chat With Us</a>
+        </div>
         
       </div>
-      <footer>
-        <h2 class="try-text">Try Double Tap Today!</h2>
-        <p class="get-started-text"><b>Let's Get Started</b></p>
-        <div class="footer-buttons">
-          <span id="get-started">Get Started<i class="fas fa-chevron-double-right fa-2x"></i></span>
-          <span id="chat-with-us"><i class="fas fa-comment-dots"></i>Chat With Us</span>
-        </div>
-        <h5 class="options-text" >Free 14 day trial   *   Manage Customers in Minutes   *   Cancel at Anytime</h5>
-      </footer>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/js/bootstrap.min.js"></script>
+    </div>
+  </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/js/bootstrap.min.js"></script>
+
 </body>
+
 </html>
