--- a/SignIn.html
+++ b/SignIn.html
@@ -17,9 +17,9 @@
                 <div class="offset-2">
                     <h2>Sign In</h2>
                     <form>
-                        <input type="username" name="username" placeholder="username" id="username">
-                        <input type="email" name="email" placeholder="email" id="email">
-                        <input type="password" name="password" placeholder="Enter password" id="password">
+                        <input type="username" name="username" placeholder="" id="username">
+                        <input type="email" name="email" placeholder="" id="email">
+                        <input type="password" name="password" placeholder="" id="password">
                         <div class="offset-5">
                             <input type="submit" value="Sign In">
                         </div> 
