--- a/crmLanding.html
+++ b/crmLanding.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 <link rel="stylesheet" href="css/crmLanding.css">
-<title>How It Works</title>
+<title>Landing</title>
 </head>
 
 <body>
@@ -73,40 +73,30 @@
       </div>
     </div>
     <div class="row" id="squarepics">
-      <div class="col-3 text-center"><button class="btn btn-primary p-4 rounded-9">ffffff</button></div>
-      <div class="col-3 text-center"><button class="btn btn-primary p-4 rounded-9">ffffff</button></div>
-      <div class="col-3 text-center"><button class="btn btn-primary p-4 rounded-9">ffffff</button></div>
-      <div class="col-3 text-center"><button class="btn btn-primary p-4 rounded-9">ffffff</button></div>
+      <div class="col-3" id="payment-col"><img src="images/Ellipse 42@2x.png" width="100%" height="auto" alt="" id="payments">Payments</div>
+      <div class="col-3" id="retain-col"><img src="images/Page-1@2x.png" width="100%" height="auto" alt="" id="retain" >Retain</div>
+      <div class="col-3" id="reporting-col"><img src="images/layer1@2x.png" width="100%" height="auto" alt="" id="reporting" >Reporting</div>
+      <div class="col-3" id="convert-col"><img src="images/upanddown opposite sidebyside updown directions two arrows@2x.png" width="100%" height="auto" alt="" id="convert">Convert</div>
     </div>
     <div class="row" id="collect_info">
       <div class="col-12 col-md-5">
-        <img src="images/Collect-info.png" alt="" class="img-fluid" id="infopic">
+        <img src="images/credit-card-picture@2x.png" alt="" class="img-fluid" id="infopic">
       </div>
       <div class="col-12 col-md-7" id="useful">
-        <h1>Collect Useful Info</h1>
-        <h2>Deliver the world of payment options an seamless checkout experiences, making it easy for customers to pay you for your products and services.</h2>
+        <h1>Start accepting payments with Ease</h1>
+        <h2>Deliver the world of payment options an seamless checkout experiences, making it
+          easy for customers to pay you for your products and services.</h2>
+        <h3>-Accept credit & debit cards, Paypal, ACH, Apple pay and more with the flick of a switch.</h3>
+        <h3>-Process transactions in up to 32 different currencies.</h3>
+        <h3>-Integrate with popular payment gateways like Stripe, and Braintree.</h3>
+        <h3>-Select from a variety of different checkout options and experiences.</h3>
+        <button type="button" class="btn btn-outline-primary text-white border-white btn-md">Learn More</button>
       </div>
     </div>
     <div class="row justify-content-center">
-      <div class="col-8">
-        <h2 class="text-center" id="second_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-            has been the industry's standard dummy text ever since the 1500's, when an unknown printer
-            took a galley of type and scrambled it to make a</h2>
-      </div>
+      <div class="col-8" id="busneeds"><h1><b>Solutions to fit your Business Needs</b></h1></div>
     </div>
-    <div class="row" id="getpaidsooner">
-      <div class="col-12 col-md-5">
-        <img src="images/Take Payments.png" alt="" class="img-fluid" id="paidpic">
-      </div>
-      <div class="col-12 col-md-7" id="paidtext">
-        <h1>Get Paid Sooner</h1>
-        <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-            Lorem Ipsum has been the industry's standard dummy text ever since the 1500's,
-            when an unknown printer took a galley of type and scrambled it to make a type
-            specimen book. It has survived not only five centuries, but also the leap into
-            electronic typesetting, remaining essentially unchanged.</h2>
-      </div>
-    </div>
+
   </div>
   <div class="container" id="footer">
     <div class="row justify-content-center" id="footer_row">
