--- a/crmLanding.html
+++ b/crmLanding.html
@@ -78,35 +78,26 @@
       <div class="col-3 text-center"><button class="btn btn-primary p-4 rounded-9">ffffff</button></div>
       <div class="col-3 text-center"><button class="btn btn-primary p-4 rounded-9">ffffff</button></div>
     </div>
-    <div class="row" id="collect_info">
-      <div class="col-12 col-md-5">
-        <img src="images/Collect-info.png" alt="" class="img-fluid" id="infopic">
-      </div>
-      <div class="col-12 col-md-7" id="useful">
-        <h1>Collect Useful Info</h1>
-        <h2>Deliver the world of payment options an seamless checkout experiences, making it easy for customers to pay you for your products and services.</h2>
-      </div>
-    </div>
-    <div class="row justify-content-center">
-      <div class="col-8">
-        <h2 class="text-center" id="second_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-            has been the industry's standard dummy text ever since the 1500's, when an unknown printer
-            took a galley of type and scrambled it to make a</h2>
-      </div>
-    </div>
+    
     <div class="row" id="getpaidsooner">
       <div class="col-12 col-md-5">
-        <img src="images/Take Payments.png" alt="" class="img-fluid" id="paidpic">
+        <img src="/images/credit-card-picture@2x.png" alt="" class="img-fluid" id="credit-card-picture">
       </div>
       <div class="col-12 col-md-7" id="paidtext">
-        <h1>Get Paid Sooner</h1>
-        <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-            Lorem Ipsum has been the industry's standard dummy text ever since the 1500's,
-            when an unknown printer took a galley of type and scrambled it to make a type
-            specimen book. It has survived not only five centuries, but also the leap into
-            electronic typesetting, remaining essentially unchanged.</h2>
+        <h1>Start accepting payment with Ease</h1>
+        <h2>Deliver the world of payment options and seamless checkout
+            experiences, making it easy for your customers to pay you for your products and services. </h2>
+            <li>Accept credit & debit cards, Paypal, ACH, Apple Pay and more with a flick of a switch. </li>
+            <li>Process transactions in up to 32 different currencies.</li>
+            <li>Integrate with popular payment gateways like Stipe, and Braintree.</li>
+          <li>Select from a variety of different checkout options and experiences.</li>
+          <input type="button" value="Learn More" id="learn">
+           
+
       </div>
     </div>
+    <div h1>
+  </div>
   </div>
   <div class="container" id="footer">
     <div class="row justify-content-center" id="footer_row">
