revert to old code

--- a/crmLanding.html
+++ b/crmLanding.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 <link rel="stylesheet" href="css/crmLanding.css">
-<title>Landing</title>
+<title>Landingg</title>
 </head>
 
 <body>
