--- a/crmLanding.html
+++ b/crmLanding.html
@@ -96,23 +96,17 @@
 
       </div>
     </div>
-    <div h1>
   </div>
   
-  </div>
-  <div class="container" id="footer">
-    <div class="row justify-content-center" id="footer_row">
-      <div class="col-5">
-        <h1>Try Double Tap Today!</h1>
-        <h2>Lets's Get Started</h2>
-        <div>
-          <a class="btn btn-primary" href="#" role="button" id="footerbutton">Get Started</a>
-          <a class="btn btn-primary" href="#" role="button">Chat With Us</a>
-        </div>
-        
-      </div>
+  <footer>
+    <h1 class="try-text">Try Double Tap Today!</h1>
+    <p class="get-started-text"><b>Let's Get Started</b></p>
+    <div class="footer-buttons">
+      <span id="get-started">Get Started<i class="fas fa-angle-double-right"></i></span>
+      <span id="chat-with-us"><i class="fas fa-comment-dots"></i>Chat With Us</span>
     </div>
-  </div>
+    <h5 class="options-text" >Free 14 day trial   *   Manage Customers in Minutes   *   Cancel at Anytime</h5>
+  </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/js/bootstrap.min.js"></script>
