--- a/crmLanding.html
+++ b/crmLanding.html
@@ -83,7 +83,7 @@
       <div class="col-12 col-md-5">
         <img src="/images/credit-card-picture@2x.png" alt="" class="img-fluid" id="credit-card-picture">
       </div>
-      <div class="col-12 col-md-7" id="paidtext">
+        <div class="col-12 col-md-7" id="paidtext">
         <h1>Start accepting payment with Ease</h1>
         <h2>Deliver the world of payment options and seamless checkout
             experiences, making it easy for your customers to pay you for your products and services. </h2>
@@ -92,17 +92,17 @@
             <li>Integrate with popular payment gateways like Stipe, and Braintree.</li>
           <li>Select from a variety of different checkout options and experiences.</li>
           <input type="button" value="Learn More" id="learn">
-           
-
+          </div>
       </div>
     </div>
-    <div h1>
-  </div>
-  
-  </div>
+
+<!-- solutions for your business -->
+
+
+<!-- footer -->
   <div class="container" id="footer">
-    <div class="row justify-content-center" id="footer_row">
-      <div class="col-5">
+          <div class="row justify-content-center" id="footer_row">
+        <div class="col-5">
         <h1>Try Double Tap Today!</h1>
         <h2>Lets's Get Started</h2>
         <div>
